<resources>
    <string name="app_name">PMDM</string>
    <string name="textobutton">Acceder</string>
    <string name="textobuttonS">Saludos</string>
    <string name="textobuttonSu">Suma</string>
    <string name="textobuttonE">Caluladora</string>
    <string name="textobuttonE1">Fibonacci</string>
    <string name="textobuttonE2">ArrayNumero</string>
    <string name="textobuttonE3">ArrayLetras</string>
    <string name="textosaluso">Buenos dias!</string>
    <string name="textosalusoboton">Saludos!</string>
    <string name="titulosuma">Suma dos numeros!</string>
    <string name="Sumanumero1">Numero 1: </string>
    <string name="Sumanumero2">Numero 2: </string>
    <string name="calcular">Calcular: </string>
    <string name="nada"> </string>
    <string name="Introduce">Introduce un numero </string>
    <string name="igual"> = </string>
    <string name="suma"> + </string>
    <string name="resta"> - </string>
    <string name="dividir"> / </string>
    <string name="multiplica"> x </string>
    <string name="uno"> 1 </string>
    <string name="dos"> 2 </string>
    <string name="tres"> 3 </string>
    <string name="cuatro"> 4 </string>
    <string name="cinco"> 5 </string>
    <string name="seis"> 6 </string>
    <string name="siete"> 7 </string>
    <string name="ocho"> 8 </string>
    <string name="nueve"> 9 </string>
    <string name="cero"> 0 </string>
    <string name="coma"> , </string>
    <string name="c"> C </string>
    <string name="parentesis"> () </string>
    <string name="fibonacci">  Fibonacci </string>
    <string name="calcularfibo"> Calcular</string>
    <string name="tituloarrayletras"> Array Letras </string>
    <string name="botonarray1"> Separar</string>
    <string name="Array"> Estas son las letras</string>
    <string name="Arrayconsonantes"> Estas son las Consonantes</string>
    <string name="Arrayvocales"> Estas son las Vocales</string>
    <string name="Arraynumeros"> Separa un array de Numeros</string>
    <string name="Arraynumerosaleatorios"> Este es el Array de Numeros Aleatorios</string>
    <string name="Arraynumerosaleatoriospares"> Este es el Array de Numeros Pares</string>
    <string name="Arraynumerosaleatoriosimpares"> Este es el Array de Numeros Impares</string>
    <string name="botonnumeros"> Generar </string>
</resources>