<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Botones2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="212dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_pmdm" />

    <Button
        android:id="@+id/suma"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8DE187A6"
        android:text="@string/textobuttonSu"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saludo" />

    <Button
        android:id="@+id/saludo"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8DAD5ABC"
        android:text="@string/textobuttonS"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/ejercicio1"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#9061A7C6"
        android:text="@string/textobuttonE"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

    <Button
        android:id="@+id/ejercicio2"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#7E57B15B"
        android:text="@string/textobuttonE1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

    <Button
        android:id="@+id/ejercicio3"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8BBBC64D"
        android:text="@string/textobuttonE2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

    <Button
        android:id="@+id/ejercicio4"
        android:layout_width="278dp"
        android:layout_height="70dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#90E87855"
        android:text="@string/textobuttonE3"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suma" />

</androidx.constraintlayout.widget.ConstraintLayout>